[gd_scene load_steps=10 format=3 uid="uid://cm1wpccpepime"]

[ext_resource type="Script" path="res://menus/pause_menu/pause_menu_main.gd" id="1_1wyvu"]
[ext_resource type="Shader" path="res://menus/pause_menu/pause_menu_blur.gdshader" id="2_hxhow"]
[ext_resource type="PackedScene" uid="uid://cgw438pdkorrb" path="res://menus/pause_menu/inventory_menu/inventory_menu.tscn" id="3_0peq7"]
[ext_resource type="PackedScene" uid="uid://bkpam5xdp4lu1" path="res://menus/pause_menu/quest_menu/quest_menu.tscn" id="4_37rwm"]
[ext_resource type="PackedScene" uid="uid://djfho244tjv2a" path="res://menus/pause_menu/spells_menu/spells_menu.tscn" id="4_87qle"]
[ext_resource type="PackedScene" uid="uid://c0gqk3bmau4gb" path="res://menus/pause_menu/stats_menu/stats_menu.tscn" id="4_vepqd"]
[ext_resource type="PackedScene" uid="uid://ce2hekpqo0xd" path="res://menus/pause_menu/system_menu/system_menu.tscn" id="5_hpp43"]
[ext_resource type="PackedScene" uid="uid://tw6fyey3ka4p" path="res://menus/pause_menu/bonfire_menu/bonfire_menu.tscn" id="7_7u0ei"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tnhip"]
shader = ExtResource("2_hxhow")
shader_parameter/lod = 0.917

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_1wyvu")

[node name="BlurRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_tnhip")
offset_right = 1152.0
offset_bottom = 648.0

[node name="MenuTabs" type="TabContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -510.5
offset_top = -274.5
offset_right = 510.5
offset_bottom = 274.5
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Inventory" type="RichTextLabel" parent="MenuTabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="InventoryMenu" parent="MenuTabs/Inventory" instance=ExtResource("3_0peq7")]
unique_name_in_owner = true
position = Vector2(-73, -117)

[node name="Stats" type="RichTextLabel" parent="MenuTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="StatsMenu" parent="MenuTabs/Stats" instance=ExtResource("4_vepqd")]
unique_name_in_owner = true

[node name="Spells" type="RichTextLabel" parent="MenuTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="SpellsMenu" parent="MenuTabs/Spells" instance=ExtResource("4_87qle")]
unique_name_in_owner = true
position = Vector2(-35.5, -86.5)

[node name="Quests" type="RichTextLabel" parent="MenuTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="QuestMenu" parent="MenuTabs/Quests" instance=ExtResource("4_37rwm")]
unique_name_in_owner = true
position = Vector2(-73, -86)

[node name="Bonfires" type="RichTextLabel" parent="MenuTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="BonfireMenu" parent="MenuTabs/Bonfires" instance=ExtResource("7_7u0ei")]
unique_name_in_owner = true

[node name="System" type="RichTextLabel" parent="MenuTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="SystemMenu" parent="MenuTabs/System" instance=ExtResource("5_hpp43")]
unique_name_in_owner = true
position = Vector2(483, 218)
